Renaming entrie to argus checkins
