# src/routes/api/v1/argus-checkins/getArgusCheckinTypes.ts
@@ -1,0 +1,21 @@
+import {z} from 'zod';
+import {openApiInstance} from '../../../../backend/utils/openApiInstance';
+import {ArgusCheckinType} from 'src/backend/model/ArgusCheckin/types/ArgusCheckinType';
+import {AppOpenApiRouteTypes} from 'src/common/types/AppOpenApiRouteTypes';
+import {OpenApiMethods} from 'src/backend/services/OpenApiService/enums/OpenApiMethods';
+
+export const getArgusCheckinTypes = openApiInstance.factory.createRoute({
+  method: OpenApiMethods.get,
+  type: AppOpenApiRouteTypes.User,
+  description: 'Returns possible checkin types for Argus',
+  path: '/checkin/types',
+  validators: {
+    response: z.object({
+      items: z.nativeEnum(ArgusCheckinType).array(),
+    }),
+  },
+  handler: async (ctx) => {
+    const values = ctx.services.models.argusCheckin.getCategories();
+    return {items: values};
+  },
+});
